--- a/engines/admin-lte/assets/templates/_namespace_/_name_/third-two.html
+++ b/engines/admin-lte/assets/templates/_namespace_/_name_/third-two.html
@@ -1,19 +1,21 @@
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <h1>
-        Third Two
-        <small>Control panel</small>
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">third two</li>
-    </ol>
-</section>
+<div>
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            Third Two
+            <small>Control panel</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li class="active">third two</li>
+        </ol>
+    </section>
 
-<!-- Main content -->
-<section class="content">
-    {{phase}}
-    <div style="height: 1550px"></div>
+    <!-- Main content -->
+    <section class="content">
+        {{phase}}
+        <div style="height: 1550px"></div>
 
-</section>
-<!-- /.content -->
+    </section>
+    <!-- /.content -->
+</div>
