--- a/engines/admin-lte/assets/templates/_namespace_/_name_/users.html
+++ b/engines/admin-lte/assets/templates/_namespace_/_name_/users.html
@@ -1,17 +1,19 @@
-<!-- Content Header (Page header) -->
-<section class="content-header">
-    <h1>
-        Users
-        <small>Control panel</small>
-    </h1>
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-        <li class="active">users</li>
-    </ol>
-</section>
+<div>
+    <!-- Content Header (Page header) -->
+    <section class="content-header">
+        <h1>
+            Users
+            <small>Control panel</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li class="active">users</li>
+        </ol>
+    </section>
 
-<!-- Main content -->
-<section class="content">
+    <!-- Main content -->
+    <section class="content">
 
-</section>
-<!-- /.content -->
+    </section>
+    <!-- /.content -->
+</div>
