--- a/engines/sb-admin/assets/sass/_namespace_/_name_/app.sass
+++ b/engines/sb-admin/assets/sass/_namespace_/_name_/app.sass
@@ -1,3 +1,4 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak
   display: none !important
 
+@import "partials/users"
