--- a/templates/sb-admin/default/resources/assets/templates/_namespace_/_name_/_the-entities_.html
+++ b/templates/sb-admin/default/resources/assets/templates/_namespace_/_name_/_the-entities_.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Title</h1>
+            <h1 class="page-header">_TheEntity_</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
