fix template name

--- a/templates/admin-lte/box/resources/assets/templates/_the-namespace_/_the-instance_/_the-entities_-inner.html
+++ b/templates/admin-lte/box/resources/assets/templates/_the-namespace_/_the-instance_/_the-entities_-inner.html
@@ -5,7 +5,7 @@
             <span class="glyphicon glyphicon-refresh"></span></div>
         &nbsp;&nbsp;
         <div class="btn-group" ng-click="reload()">
-            <div class="btn btn-default btn-sm" ng-model="filter.apply" uib-btn-radio="'0'">
+            <div class="btn btn-default btn-sm" ng-model="filter.apply" uib-btn-radio="''">
                 Audit
             </div>
             <div class="btn btn-default btn-sm" ng-model="filter.apply" uib-btn-radio="'1'">
